# python-2025-sesion-03-template

./: compose.yaml  main.py  pyproject.toml
M6-django/books/: admin.py  models.py  serializers.py  urls.py  views.py
M6-django/books/migrations/: 0001_initial.py
M6-django/books_project/: settings.py  urls.py
M6-fastapi/: basic_app.py  basic_app_docs.py  fastapi_sqlalchemy.py
M6-flask/: app_flask.py
M6-sockets/: tcp_client.py  tcp_client2.py  tcp_server.py  tcp_server2.py  udp_client.py  udp_client2.py  udp_server.py  udp_server2.py
notebooks/: M601_fastapi.ipynb  M602_fastapi_flask_drf.ipynb
seed/mysql_init/: 01-books.sql  books_simple_db.sql  books_simple_drf.sql
