[project]
name = "sesion-03"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "cryptography>=45.0.4",
    "django>=5.2.3",
    "djangorestframework>=3.16.0",
    "fastapi>=0.115.13",
    "flask>=3.1.1",
    "jupyter>=1.1.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pymysql>=1.1.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
]
